--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Publish binaries on release
 on: release
 jobs:
-  build:
-    name: Build
+  build_and_release:
+    name: Release
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build
-        run: mkdir -p bin/${{ matrix.os }} && go build -o bin/${{ matrix.os }}
+        run: mkdir -p $GITHUB_WORKSPACE/bin/${{ matrix.os }} && go build -o $GITHUB_WORKSPACE/bin/${{ matrix.os }}
         env:
           GOOS: ${{ matrix.os }}
           GOARCH: amd64
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: ${{ matrix.os }}-testbox
-          path: bin/${{ matrix.os }}/testbox
+          path: $GITHUB_WORKSPACE/bin/${{ matrix.os }}/testbox
