--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goos: [darwin, linux]
+        goos: [darwin, windows, linux]
     steps:
       - name: Set up Go 1.13
         uses: actions/setup-go@v1
@@ -22,11 +22,12 @@ jobs:
           GOARCH: amd64
         run: |
           mkdir -p bin/${{ matrix.goos }}
-          go build -o bin/${{ matrix.goos }}
+          go build -o bin/${{ matrix.goos }}/testbox
+          zip -r ${{ matrix.goos }}-testbox bin/${{ matrix.goos }}
 
       - name: Release
         uses: fnkr/github-action-ghr@v1
         if: startsWith(github.ref, 'refs/tags/')
         env:
-          GHR_PATH: bin/${{ matrix.goos }}
+          GHR_PATH: ${{ matrix.goos }}-testbox.zip
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
