--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goos: [darwin, linux]
+        goos: [darwin, windows, linux]
     steps:
       - name: Set up Go 1.13
         uses: actions/setup-go@v1
@@ -16,17 +16,24 @@ jobs:
       - name: Check out source code
         uses: actions/checkout@v1
 
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
       - name: Build
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: amd64
         run: |
-          mkdir -p bin/${{ matrix.goos }}
-          go build -o bin/${{ matrix.goos }}
+          mkdir -p ${{ matrix.goos }}
+          go build -o ${{ matrix.goos }}
+          zip -r testbox-${{ matrix.goos }}-${{ github.ref }} ${{ matrix.goos }}
 
       - name: Release
         uses: fnkr/github-action-ghr@v1
         if: startsWith(github.ref, 'refs/tags/')
         env:
-          GHR_PATH: bin/${{ matrix.goos }}
+          GHR_PATH: testbox-${{ matrix.goos }}-${{ github.ref }}.zip
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
